force-app/main/default/objects/Discount__c/fields/Discount_Form__c.field-meta.xml
<CustomField>
    <fullName>Discount_Form__c</fullName>
    <label>Discount Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>