force-app/main/default/objects/Discount__c/fields/Minimum_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Order_Amount__c</fullName>
    <label>Minimum Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>