force-app/main/default/objects/Discount__c/fields/Recurrence_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Pattern__c</fullName>
    <label>Recurrence Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Last Day of Month</fullName>
            </value>
            <value>
                <fullName>Every Monday</fullName>
            </value>
            <value>
                <fullName>Black Friday</fullName>
            </value>
            <value>
                <fullName>Custom Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>