force-app/main/default/objects/Discount__c/fields/Target_Product__c.field-meta.xml
<CustomField>
    <fullName>Target_Product__c</fullName>
    <label>Target Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Discounts (Target)</relationshipLabel>
    <relationshipName>Target_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>