force-app/main/default/objects/Discount__c/fields/Trigger_Product__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Product__c</fullName>
    <label>Trigger Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Discounts (Trigger)</relationshipLabel>
    <relationshipName>Trigger_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>